# employment-certificate

./: README.md
Agent/: CLAUDE.md  agent.mermaid  entry-points.json  input.json  langgraph.json  local.settings.json  main.py  pyproject.toml
Agent/skill/: SKILL.md
Agent/skill/scripts/: analyze_shuroushomei.py  section_name_map.json
RPA/: Main.xaml  Main.xaml.json  entry-points.json  project.json  project.uiproj
RPA/input/: sample_data.csv
